--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/styles.min.css">
-    <title>Document</title>
+    <title>Puls</title>
 </head>
 <body>
- <div class="new">Hello world</div>   
+ <div class="new">Привет мир </div>   
 </body>
 </html>
