add header project

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,40 @@
     <title>Puls</title>
 </head>
 <body>
- <div class="new">Привет мир </div>   
+ <div class="promo">
+     <div class="container">
+         <header class="header">
+             <a href="#" class="header__logo ">
+             <img src="icons/hd/logo.png" alt="logo">    
+             </a>
+             <div class="header__oficial">Официальный представитель<br><p>
+                Garmin, Polar, Suunto</p></div>
+             <div class="header__contacts">
+                <a href="tel:8104999228974"><div class="header__phone">+7 (499) 922-89-74</div></a>
+                <button class="button">заказать звонок</button>
+             </div>
+         </header>
+        <div class="promo__wrapper"> 
+            <h1 class="promo__header">Подбор пульсометра</h1> 
+            <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+        
+            <div class="promo__icons">
+                <div class="promo__icon"><img src="icons/hd/019_timer_time_stopwatch_2_64_41.png" alt="timer">Время подбора:
+                    10 минут</div>
+                <div class="promo__icon"><img src="icons/hd/app_08_hand_cart_64_48.png" alt="cargo">Время подбора:
+                    10 минут</div>
+                <div class="promo__icon"><img src="icons/hd/messages_64_49.png" alt="message">Ответим
+                    на все вопросы</div>
+            </div>
+            <button class="button_button_main">заказать консультацию</button>
+
+            <div class="promo__link">
+                или 
+                <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+            </div>
+        </div>
+      
+     </div>
+ </div> 
 </body>
 </html>
