adaptive to 768 px , 576px , add subheader block

--- a/src/index.html
+++ b/src/index.html
@@ -1,49 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/styles.min.css">
-    <title>Puls</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="css/styles.min.css">
+	<title>Puls</title>
 </head>
 <body>
  <div class="promo">
-     <div class="container">
-         <header class="header">
-             <a href="#" class="header__logo ">
-             <img src="icons/hd/logo.png" alt="logo">    
-             </a>
-             <div class="header__oficial">Официальный представитель<br><p>
-                Garmin, Polar, Suunto</p></div>
-             <div class="header__contacts">
-                <a href="tel:8104999228974"><div class="header__phone">+7 (499) 922-89-74</div></a>
-                <button class="button">заказать звонок</button>
-             </div>
-         </header>
-        <div class="promo__wrapper"> 
-            <h1 class="promo__header">Подбор пульсометра</h1> 
-            <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
-        
-            <div class="promo__icons">
-                <div class="promo__icon"><img src="icons/hd/019_timer_time_stopwatch_2_64_41.png" alt="timer">Время подбора:
-                    10 минут</div>
-                <div class="promo__icon"><img src="icons/hd/app_08_hand_cart_64_48.png" alt="cargo">Время подбора:
-                    10 минут</div>
-                <div class="promo__icon"><img src="icons/hd/messages_64_49.png" alt="message">Ответим
-                    на все вопросы</div>
-            </div>
-            <button class="button_button_main">заказать консультацию</button>
+	 <div class="container">
+		 <header class="header">
+			 <a href="#" class="header__logo ">
+			 <img src="icons/hd/logo.png" alt="logo">    
+			 </a>
+			 <div class="header__oficial">Официальный представитель<br><p>
+				Garmin, Polar, Suunto</p></div>
+			 <div class="header__contacts">
+				<a href="tel:8104999228974"><div class="header__phone">+7 (499) 922-89-74</div></a>
+				<button class="button">заказать звонок</button>
+			 </div>
+		 </header>
+		<div class="promo__wrapper"> 
+			<h1 class="promo__header">Подбор пульсометра</h1> 
+			<h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+		
+			<div class="promo__icons">
+				<div class="promo__icon"><img src="icons/hd/019_timer_time_stopwatch_2_64_41.png" alt="timer">Время подбора:
+					10 минут</div>
+				<div class="promo__icon"><img src="icons/hd/app_08_hand_cart_64_48.png" alt="cargo">Время подбора:
+					10 минут</div>
+				<div class="promo__icon"><img src="icons/hd/messages_64_49.png" alt="message">Ответим
+					на все вопросы</div>
+			</div>
+			<button class="button_button_main">заказать консультацию</button>
 
-            <div class="promo__link">
-                или 
-                <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
-            </div>
-        </div>
-      
-     </div>
+			<div class="promo__link">
+				или 
+				<a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+			</div>
+		</div>
+	 </div>
+ </div>
+ <div class="subheader">
+	 <div class="container">
+		 <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2> 
+		 <div class="subheader_wrapper">
+		 <div class="wrapper"><img src="icons/md/cup_74.svg" alt="cup"><div class="title">Делимся опытом</div><div class="discr">Наши сотрудники всегда готовы поделиться своим опытом,<br>
+			так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div></div>
+		 <div class="wrapper"><img src="icons/md/heart_72.svg" alt="heart"><div class="title">Заботимся о здоровье</div><div class="discr">Мы работаем для того,<br> 
+			чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div></div>
+		 <div class="wrapper"><img src="icons/md/shoe_72.svg" alt="shoe"><div class="title">Учим бегать</div><div class="discr">Помогаем с обучением 
+			правильной технике бега! <br>
+			Дружим с крупнейшей школой бега в России - <a href="#"> I LOVE RUNNING.</a></div></div>
+		</div>
+	</div>
  </div> 
 </body>
 </html>
