--- a/src/index.html
+++ b/src/index.html
@@ -58,5 +58,19 @@
 		</div>
 	</div>
  </div> 
+ <div class="consultation">
+	 <div class="container">
+		 <h2 class="title">Получите бесплатную консультацию<br>
+			по подбору пульсометра</h2>
+		 <h2 class="subtitle">Просто заполните форму заявки <br>
+			и мы перезвоним вам в течении 10 минут</h2>
+		 <form action="#" class="consult_form">
+			 <input type="text" required placeholder="ваше имя" >
+			 <input style="resize:none" type="number" type="tel" required placeholder="ваш номер телефона" >
+			 <input type="email" required placeholder="ваш E-mail адрес" >
+			 <button>заказать консультацию</button>
+		 </form>
+	 </div>
+ </div>
 </body>
 </html>
