--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/styles.min.css">
+	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
 	<title>Puls</title>
 </head>
 <body>
- <div class="promo">
+ <section class="promo">
 	 <div class="container">
 		 <header class="header">
 			 <a href="#" class="header__logo ">
@@ -43,8 +44,8 @@
 			</div>
 		</div>
 	 </div>
- </div>
- <div class="subheader">
+ </section>
+ <section class="subheader">
 	 <div class="container">
 		 <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2> 
 		 <div class="subheader_wrapper">
@@ -57,8 +58,8 @@
 			Дружим с крупнейшей школой бега в России - <a href="#"> I LOVE RUNNING.</a></div></div>
 		</div>
 	</div>
- </div> 
- <div class="consultation">
+ </section> 
+ <section class="consultation">
 	 <div class="container">
 		 <h2 class="title">Получите бесплатную консультацию<br>
 			по подбору пульсометра</h2>
@@ -71,6 +72,22 @@
 			 <button>заказать консультацию</button>
 		 </form>
 	 </div>
- </div>
+ </section>
+ <section class="carusel">
+	<div class="container">
+		<div class="carusel_slider">
+			<div>
+				<img src="img/carusel/1.jpg" alt="clock"></div>
+			<div>
+				<img src="img/carusel/2.jpg" alt="clock"></div>
+			<div>
+				<img src="img/carusel/3.jpg" alt="clock"></div>
+		</div>
+	</div>
+ </section>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
