--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,63 @@
 		</div>
 	</div>
  </section>
+ <section class="catalog">
+	 <div class="container">
+		 <h2 class="title">Каталог пульсометров</h2>
+		 <ul class="catalog__tabs">
+			 <li class="catalog__tab"><div>для фитнеса</div></li>
+			 <li class="catalog__tab"><div>для бега</div></li>
+			 <li class="catalog__tab"><div>для триатлона</div></li>
+		 </ul>
+
+		 <div class="catalog__content">
+			 <div class="catalog-item">
+				 <img src="img/ft/clock1.jpg" alt="pulsometr" class="catalog-item__img">
+				 <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+				 <div class="catalog-item__descr">Для первых шагов в тренировках,<br> основанных на сердечном ритме</div>
+				 <div class="catalog-item__link"><a href="#">ПОДРОБНЕЕ</a></div>
+				 <hr>
+				 <div class="catalog-item__footer">
+					<div class="catalog-item__prices">
+						<div class="catalog-item__old-price">4750 руб.</div>
+						<div class="catalog-item__new-price">4500 руб.</div>
+					</div>
+					<button class="button button_mini">купить </button>
+			 	 </div>
+			 </div>
+			 <div class="catalog-item">
+				<img src="img/ft/clock1.jpg" alt="pulsometr" class="catalog-item__img">
+				<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+				<div class="catalog-item__descr">Для первых шагов в тренировках,<br> основанных на сердечном ритме</div>
+				<div class="catalog-item__link"><a href="#">ПОДРОБНЕЕ</a></div>
+				<hr>
+				<div class="catalog-item__footer">
+				   <div class="catalog-item__prices">
+					   <div class="catalog-item__old-price">4750 руб.</div>
+					   <div class="catalog-item__new-price">4500 руб.</div>
+				   </div>
+				   <button class="button button_mini">купить </button>
+				 </div>
+			</div>
+			<div class="catalog-item">
+				<img src="img/ft/clock1.jpg" alt="pulsometr" class="catalog-item__img">
+				<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+				<div class="catalog-item__descr">Для первых шагов в тренировках,<br> основанных на сердечном ритме</div>
+				<div class="catalog-item__link"><a href="#">ПОДРОБНЕЕ</a></div>
+				<hr>
+				<div class="catalog-item__footer">
+				   <div class="catalog-item__prices">
+					   <div class="catalog-item__old-price">4750 руб.</div>
+					   <div class="catalog-item__new-price">4500 руб.</div>
+				   </div>
+				   <button class="button button_mini">купить </button>
+				 </div>
+			</div>
+			
+		 </div>
+		 
+	 </div>	
+ </section>
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="js/slick.min.js"></script>
