--- a/src/index.html
+++ b/src/index.html
@@ -394,6 +394,79 @@
 		</div>
 	</div>
 </section>
+<section class="comments">
+	<div class="container">
+		<h2 class="title">отзывы клиентов</h2>
+		<div class="comments__new">
+			<div class="wrapper">
+				<div class="img"><img src="img/comments/girl1.jpg" alt="Tatsiana"></div>
+				<div class="comment">
+					<div class="comment_title">
+						Ирина Иванченко	
+					</div>
+					<div class="comment_subtitle">
+						2 полумарафона
+					</div>
+					<div class="comment_descr">
+					Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали <br> пульсометр, который подошёл именно под мои цели и финансовые возможности <br>
+					Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+					<br>
+					<br>
+					Новые цели - новый гаджет!
+					<br>
+					<br>
+					Спасибо, RunSmart!
+		
+					</>
+				</div>
+			</div>
+			</div>
+		</div>
+		<hr>
+		<div class="comments__new">
+			<div class="wrapper">
+				<div class="img"><img src="img/comments/girl2.jpg" alt="Tatsiana"></div>
+				<div class="comment">
+					<div class="comment_title">
+						Юлия Дашкина
+					</div>
+					<div class="comment_subtitle">
+						2 полумарафона
+					</div>
+					<div class="comment_descr">
+						Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось <br>	 тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и <br> решила попробовать.<br> 
+						<br> 
+						Позвонила, ребята поинтересовались моими целями и подобрали очень интересный <br> вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 <br> полумарафона и несколько более коротких забегов и не намерена останавливаться!<br> 
+						<br> 
+						Спасибо!!!
+						Спасибо, RunSmart!
+		
+					</div>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<div class="comments__new">
+			<div class="wrapper">
+				<div class="img"><img src="img/comments/man.jpg" alt="Tatsiana"></div>
+				<div class="comment">
+					<div class="comment_title">
+						Иван Сёмочкин
+					</div>
+					<div class="comment_subtitle">
+						1 полумарафон
+					</div>
+					<div class="comment_descr">
+						Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. <br>
+						Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели <br>первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы<br> анатомии, составили план тренировок на месяц вперёд.<br>
+						<br>
+						С ними подготовился к своему первому полумарафону! Спасибо!!!
+				</div>
+			</div>
+			</div>
+		</div>
+	</div>
+</section>
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="js/slick.min.js"></script>
