--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 				Garmin, Polar, Suunto</p></div>
 			 <div class="header__contacts">
 				<a href="tel:8104999228974"><div class="header__phone">+7 (499) 922-89-74</div></a>
-				<button class="button">заказать звонок</button>
+				<button data-modal="consultation" class="button">заказать звонок</button>
 			 </div>
 		 </header>
 		<div class="promo__wrapper"> 
@@ -36,7 +36,7 @@
 				<div class="promo__icon"><img src="icons/hd/messages_64_49.png" alt="message">Ответим
 					на все вопросы</div>
 			</div>
-			<button class="button_button_main">заказать консультацию</button>
+			<button data-modal="consultation" class="button_button_main">заказать консультацию</button>
 
 			<div class="promo__link">
 				или 
@@ -467,6 +467,71 @@
 		</div>
 	</div>
 </section>
+<footer class="footer">
+	<div class="footer__map">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.430307459399!2d37.644807316089135!3d55.76839799825631!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2spl!4v1604052025087!5m2!1sru!2spl" width="100%" height="650" frameborder="0" style="border:2px #000000;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+	</div>
+	<div class="footer__info">
+		<div class="footer__info_adress">Москва, Мясницкий проезд, д.3с1</div>
+		<div class="footer__info_contact">8 (499) 922-89-74</div>
+		<div class="footer__info_icon">
+			<div class="row">
+			<div class="img"><a href="#"><img src="icons/svg/instagram.svg" alt="instagramm"></a></div>
+			<div class="img"><a href="#"><img src="icons/svg/facebook.svg" alt="facebook"></a></div>
+			<div class="img"><a href="#"><img src="icons/svg/twitter.svg" alt="twitter"></a></div>	
+			</div>	
+		</div>
+	</div>
+</footer>
+
+<div class="overlay">
+	<div class="modal" id="consultation">
+		<div class="modal__close">
+			&times;
+		</div>
+		<div class="modal__subtitle">
+			Просто заполните форму заявки
+		</div>
+		<div class="modal__descr">
+			и мы перезвоним вам в течении 10 минут
+		</div>		
+		<form action="#" class="form">
+			<input type="text" required placeholder="ваше имя" >
+			<input style="resize:none" type="number" type="tel" required placeholder="ваш номер телефона" >
+			<input type="email" required placeholder="ваш E-mail адрес" >
+			<button>заказать консультацию</button>
+		</form>
+	</div>
+	<div class="modal" id="order">
+		<div class="modal__close">
+			&times;
+		</div>
+		<div class="modal__subtitle">
+			ваш заказ:
+		</div>
+		<div class="modal__descr">
+			Пульсометр Polar FT1
+		</div>		
+		<form action="#" class="form">
+			<input type="text" required placeholder="ваше имя" >
+			<input style="resize:none" type="number" type="tel" required placeholder="ваш номер телефона" >
+			<input type="email" required placeholder="ваш E-mail адрес" >
+			<button>купить</button>
+		</form>
+	</div>
+	<div class="modal modal_mini" id="thanks">
+		<div class="modal__close">
+			&times;
+		</div>
+		<div class="modal__subtitle">
+			Спасибо за вашу заявку!
+		</div>
+		<div class="modal__descr">
+			Наш менеджер свяжется с вами 
+		в ближайшее время!
+		</div>		
+	</div>
+</div>
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="js/slick.min.js"></script>
